3.0.0 crash at startup loading armature custom bone curve #93525

Closed
opened 2021-11-30 22:10:04 +01:00 by shannon zachow · 6 comments

System Information
Operating system: Linux
Graphics card: RTX-2060

Blender Version
Broken: 3.0.0 release candidate
Worked: 2.93.6

Caused by {a07089dcb10d8f026}

Short description of error

blender crashes at startup when trying to load old file containing Armature + Custom_Bones(Text Curve)

Exact steps for others to reproduce the error

start with old blender file containing Armature that has custom_bone_shapes,
where custom_bone_shapes are Text Objects (blenderfont, curve objects, not converted to meshes)

(I use custom_bone_shapes for IK targets & poles... "A" for arm, "L" for leg, etc.
I know I can convert these to meshes, but that is a destructive irreversible process which would have to be repeated in all rigged-character files.)

see simple test file "test040_..." created just now in blender 2.93.6, appended below.
Try to open this with blender 3.0.0 release candidate.

Problem is the same whether or not I use "--factory-startup" command-line switch.
Problem is the same whether I have Prefs > System: set to CUDA or OPTIX
Problem is the same with 3.0.0rc from 2021nov25, and that from 2021nov30, earlier versions of 3.0 that I tried simply did not draw the custom bones at all. (see #92120)

test040_customBoneCurves.blend
test040_customBoneCurves.crash.txt

I have tried this on several rigged character files (which all contain text/curve custom-bones),
and they all share the line:

DRW_curve_batch_cache_create_requested+0x27

system-info.txt

(( thanks for blender!!! ))

**System Information** Operating system: Linux Graphics card: RTX-2060 **Blender Version** Broken: 3.0.0 release candidate Worked: 2.93.6 Caused by {a07089dcb10d8f026} **Short description of error** blender crashes at startup when trying to load old file containing Armature + Custom_Bones(Text Curve) **Exact steps for others to reproduce the error** start with old blender file containing Armature that has custom_bone_shapes, where custom_bone_shapes are Text Objects (blenderfont, curve objects, not converted to meshes) (I use custom_bone_shapes for IK targets & poles... "A" for arm, "L" for leg, etc. I know I can convert these to meshes, but that is a destructive irreversible process which would have to be repeated in all rigged-character files.) see simple test file "test040_..." created just now in blender 2.93.6, appended below. Try to open this with blender 3.0.0 release candidate. Problem is the same whether or not I use "--factory-startup" command-line switch. Problem is the same whether I have Prefs > System: set to CUDA or OPTIX Problem is the same with 3.0.0rc from 2021nov25, and that from 2021nov30, earlier versions of 3.0 that I tried simply did not draw the custom bones at all. (see #92120) [test040_customBoneCurves.blend](https://archive.blender.org/developer/F12669994/test040_customBoneCurves.blend) [test040_customBoneCurves.crash.txt](https://archive.blender.org/developer/F12669990/test040_customBoneCurves.crash.txt) I have tried this on several rigged character files (which all contain text/curve custom-bones), and they all share the line: ``` DRW_curve_batch_cache_create_requested+0x27 ``` [system-info.txt](https://archive.blender.org/developer/F12670001/system-info.txt) (( thanks for blender!!! ))
Author

Added subscriber: @shannonz

Added subscriber: @shannonz
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report and the investigation. I can confirm this. Quite an ugly bit of code...

Seems to be caused by a07089dcb1, I'm a bit lost on the solution though.
My guess of adding drw_batch_cache_validate(custom); to drw_shgroup_bone_custom_solid didn't work, it only moved the problem elsewhere.

Thanks for the report and the investigation. I can confirm this. Quite an ugly bit of code... Seems to be caused by a07089dcb10d8f026, I'm a bit lost on the solution though. My guess of adding `drw_batch_cache_validate(custom);` to `drw_shgroup_bone_custom_solid` didn't work, it only moved the problem elsewhere.

This issue was referenced by 594656e7a3

This issue was referenced by 594656e7a39d3598d7a357511742fb0b001254bc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-12-02 03:17:16 +01:00
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:58:47 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93525
No description provided.